# libinfect

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cross-build.yml
baremetal/: CMakeLists.txt
baremetal/arch/arm/: syscall_arch.h
baremetal/include/baremetal/: alloc.h  atomic.h  compiler.h  debug.h  exit.h  file.h  format.h  futex.h  mman.h  process.h  signal.h  string.h  thread.h
baremetal/internal/include/: syscall.h
baremetal/src/: alloc.c  atomic.c  debug.c  exit.c  file.c  format.c  futex.c  mman.c  process.c  putchar.c  signal.c  string.c  thread.c
baremetal/tests/: CMakeLists.txt  thread.cpp
cmake/: Backtrace.cmake  BuildType.cmake  CCache.cmake  Compatibility.cmake  CompilerWarnings.cmake  Embed.cmake  FindFilesystem.cmake  InfectBaremetal.cmake  InfectConfig.cmake  InfectFreestanding.cmake  InfectModule.cmake  InfectPrograms.cmake  Install.cmake  Message.cmake  Packages.cmake  Sanitizers.cmake  Scripts.cmake  StandardCXXLibrary.cmake
cmake/config/: Infect.cmake.in
cmake/scripts/: embed
doc/: module.md
freestanding/: CMakeLists.txt
freestanding/arch/arm/: sys_clone.S
freestanding/arch/x86/: sys_clone.S  syscall_arch.h
freestanding/include/freestanding/: alloc.h  atomic.h  common.h  debug.h  exit.h  file.h  format.h  futex.h  mman.h  process.h  signal.h  string.h  thread.h
freestanding/src/: alloc.c  atomic.c  debug.c  exit.c  file.c  format.c  futex.c  mman.c  process.c  putchar.c  signal.c  string.c  thread.c
freestanding/tests/: CMakeLists.txt  thread.cpp
infect/: CMakeLists.txt
infect/arch/arm/: remote.c
infect/arch/x86/: remote.c
infect/include/infect/: inject.h
infect/internal/include/: config.h  remote-dlfcn.h  remote-handle.h  remote-mem.h  remote-module.h  remote-stdlib.h  remote.h  resolve.h
infect/modules/: CMakeLists.txt  init.c  module-promise.c  module-promise.h  module.h  modules.S
infect/modules/async_dlfcn/: async_dlfcn.c
infect/src/: inject-code.c  inject-dso-unsafe.c  inject-dso.c  inject-module.c  remote-dlfcn.c  remote-mem.c  remote-module.c  remote-stdlib.c  remote.c  resolve.c
infect/tests/: CMakeLists.txt  inject-code.cpp  inject.cpp  injectable.c  injectable.dso.c  injectable.module.c  remote.cpp  victim.c  victim.hpp
plugins/: CMakeLists.txt
plugins/redirect/: CMakeLists.txt  redirect.c
tools/: CMakeLists.txt
tools/injector/: CMakeLists.txt  exceptions.hpp  injector.cpp  main.cpp
util/: CMakeLists.txt
util++/: CMakeLists.txt
util++/include/: filesystem.hpp  finally.hpp  xcatch.hpp
util/include/util/: common.h  compiler.h  debug.h  elf.h  embeddable.h  error_codes.h  error_codes.inc  file.h  process.h  syscall.h  time.h  xerror.h
util/src/: common.c  debug.c  elf.c  embeddable.c  file.c  process.c  xerror.c
